# LocalClaw

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  CUserscristDesktopLocaLM.sisyphusnotepadslocalmlearnings.md  MCP_CONFIG.md  README.md  SKILLS.md  build_cuda.bat  build_macos.sh
.claude/: settings.local.json
.github/workflows/: build.yml
assets/: styles.css
src/: app.rs  lib.rs  main.rs
src/agent/: AGENTS.md  loop_runner.rs  mcp_config.rs  mod.rs  permissions.rs  planning.rs  prompts.rs  runner.rs  tools.rs
src/agent/skills/: loader.rs  mod.rs  registry.rs
src/agent/tools/: dev.rs  exa.rs  filesystem.rs  git.rs  mcp_client.rs  mcp_management.rs  mcp_presets.rs  openrouter.rs  pdf.rs  shell.rs  skill_create.rs  skill_invoke.rs  skill_list.rs  system.rs  web.rs
src/inference/: AGENTS.md  engine.rs  mod.rs  model.rs  streaming.rs
src/storage/: AGENTS.md  conversations.rs  huggingface.rs  mod.rs  models.rs  settings.rs
src/system/: gpu.rs  mod.rs  resources.rs
src/types/: config.rs  message.rs  mod.rs  model.rs
src/ui/: AGENTS.md  mod.rs
src/ui/chat/: input.rs  message.rs  mod.rs
src/ui/components/: mod.rs  permission_dialog.rs
src/ui/settings/: appearance.rs  hardware.rs  inference.rs  mcp.rs  mod.rs  skills.rs  tools.rs
src/ui/sidebar/: conversation_list.rs  mod.rs  model_picker.rs
