[package]
name = "localm"
version = "0.2.0"
edition = "2021"

[dependencies]
dioxus = { version = "0.6", features = ["desktop"] }
tokio = { version = "1", features = ["full", "process"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
directories = "5"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
llama-cpp-2 = { version = "=0.1.132", features = ["sampler"] }

# Agent/AI capabilities
reqwest = { version = "0.12", features = ["json", "stream"] }
schemars = "0.8"
async-trait = "0.1"
dashmap = "6"
once_cell = "1"

[features]
default = []
cuda = ["llama-cpp-2/cuda"]
vulkan = ["llama-cpp-2/vulkan"]

[profile.release]
lto = true
strip = true

[dev-dependencies]
tempfile = "3"
